# Model-and-Safety-Score

./: .env.example  .gitignore  README.md  accident_svi.py  safety_score_1.ipynb
SpeedSafetyScorev1/: README.md  safety_score_1.ipynb
SpeedSafetyScorev2/: README.md  final_ai_safer_road.ipynb
adb_pipeline/: accident_correlate.py  accidents.py  cli.py  curvature.py  labelled.py  stage3_detect.py  stage6_lanes.py
street_view_analysis/: pyproject.toml
street_view_analysis/adb_pipeline/: __init__.py  config.py  geo.py  plot_correlation.py  stage1_mismatch.py  stage1_strata.py  stage2_gsv.py  stage4_correlate.py
